code/src/index.css
:root {
  ---main: #F6BD60;
  ---thought-input: #D4D3D3;
  ---thought-card: #F7EDE2;
  ---buttons: #FFB3C1;

}

body {
  margin-top: 20px;
  background-color: var(---main);
  font-family: "Roboto","Helvetica Neue",sans-serif;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

form {
  background-color: var(---thought-input);
  border: 1px solid #000;
  width: 250px;
  padding: 10px;
  margin-bottom: 20px;
  box-shadow: 8px 8px;
  display: flex;
  flex-direction: column;
}

.header-text {
  font-size: 14px;
  font-weight: bold;
}

.text-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 14px;
}

.text-input {
  height: 70px;
  margin-bottom: 13px;
  resize: vertical;
}

.form-btn {
  background-color: var(---buttons);
  border: none;
  border-radius: 25px;
  height: 40px;
  width: 200px;
  cursor: pointer;
}

.message-container {
  background-color: var(---thought-card);
  border: 1px solid #000;
  width: 250px;
  padding: 10px;
  box-shadow: 8px 8px;
  margin-bottom: 20px;
  overflow-wrap: break-word;
}

.input-container {
  display: flex;
  justify-content: space-between;
}

.likes-container {
  display: flex;
  flex-direction: row;
}

button {
  border: none;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  background-color: var(---buttons);
  cursor: pointer;
}

button:hover {
  background-color: #F28482;
}

.zeroClicks {
  background-color: var(---thought-input);
}

.likes-amount {
  font-size: 12px;
  padding-left: 5px;
}

.time {
  font-size: 12px;
}

.heart {
  padding: 5px;
}


@media screen and (min-width: 668px) {
  form {
    width: 400px;
  }

  .message-container {
    width: 400px;
  }
}

